Update x100v post text.

--- a/pages/posts/2020-11-02-x100v.md
+++ b/pages/posts/2020-11-02-x100v.md
@@ -8,7 +8,7 @@ Back in 2013, I had spent about a year with primes. First, the bang-for-your-buc
 
 It was take-everywhere-with-you small, had the perfect 23mmf2 lens, crushed in low light, and it looked _great_. I didn't know it at the time, but this object would end up making an outsized impact on my world. In a time when the cameras in our phones were still finding their way, the X100S came with me most places. It made a life in my work bag, on my shoulder after dinner on a weeknight, in the bottom of my backpack in Guatemala -- through the sun, snow, and rain; no lens cap required.
 
-This is the first shot I took with the X100S -- unabashedly boring and unimpressive, and meaningful nonetheless.
+This is the first shot I took with the X100S in my apartment at 11th and Walnut -- unabashedly boring and unimpressive, and meaningful nonetheless.
 ![one](/static/images/posts/2020-11-02-x100v/martinis.jpg)
 
 I've always wanted to keep a journal -- maybe it's some idea that putting pen to paper is romantic. And I've made attempts a number of times that predictably fall off after a week or so. But all I _really_ want is the superpower to look back on who, and where, and what we were all doing. This camera has become my medium for that.
